# lbrxAgents

./: .claude.json  .gitignore  AGENT_INSTRUCTIONS.md  ClaudeProtocolTester-agent.js  OrchestratorTemplate.js  PROTOCOL_README.md  PROTOCOL_SUMMARY.md  QUICKSTART.md  QuantumScoutAgent-agent.js  QuantumScoutAgentCard.json  README-NPM.md  README.md  RequirementGathererAgent.js  SPRZATANIE_LOG_20250504_170529.txt  SPRZATANIE_LOG_20250504_170603.txt  SPRZATANIE_LOG_20250504_172017.txt  a2a-feedback.js  agent-api.js  agent-cli.js  agent-template.js  check-messages.sh  cli.js  create-agent.sh  index.js  inject.js  instructions-example.md  list-agents.sh  macOSvibe.md  openai-throttle.js  package-lock.json  package.json  plan-next.md  pnpm-lock.yaml  quick-test.js  send-message.sh  test-improved-protocol.js
.memory/: cleanupdiff.md
cards/: ClaudeAgentCard.json  ClaudeProtocolTesterCard.json  ClientCard.json  CodeWorkerCard.json  CoordinatorCard.json  DataWorkerCard.json  DemoCard.json  ProtocolHandoverAgentCard.json  ProtocolTesterAgentCard.json
config/: mcp-servers.json  starship.toml
docs/: MACRO-INSTRUKCJA.mdx  README-new.md  TROUBLESHOOTING.md  ultimate-memex-RAG.mdx
examples/: a2a-integration.md  claude-gpt-bridge.js  claude-test-protocol.js  listen-for-tasks.js  multi-agent-system.js  send-message.js
ratatui/: Cargo.toml
ratatui-dashboard/: Cargo.toml
ratatui-dashboard/src/: main.rs
ratatui-dashboard/src/app/: state.rs
ratatui-dashboard/src/services/: agents.rs  logs.rs  mod.rs
ratatui-dashboard/src/ui/: agent_list.rs  log_viewer.rs  mod.rs
(+388 files in other folders)
